<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home_tab">

    <fragment
        android:id="@+id/navigation_home_tab"
        android:name="com.example.sunpool.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_workers_tab"
        android:name="com.example.sunpool.ui.workers.WorkersFragment"
        android:label="@string/title_workers"
        tools:layout="@layout/fragment_workers" />

    <fragment
        android:id="@+id/navigation_stats_tab"
        android:name="com.example.sunpool.ui.stats.StatsFragment"
        android:label="@string/title_pool"
        tools:layout="@layout/fragment_stats" />
</navigation>