<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/worker_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/worker_name"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/last_seen"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1h_avg_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6h_avg_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/_24h_avg_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_shares"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="1"
            android:orientation="vertical">


            <TextView
                android:id="@+id/worker_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/last_seen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_1h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_6h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_24h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="0" />

            <TextView
                android:id="@+id/invalid_shares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>