<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/beam_logo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerCrop"
        android:scaleX="1.25"
        android:scaleY="1.25"
        android:src="@drawable/beam_logo"
        app:layout_constraintStart_toStartOf="@id/public_key"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/short_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/beam_logo"
        app:layout_constraintEnd_toEndOf="@id/public_key"
        app:layout_constraintStart_toEndOf="@id/beam_logo"
        app:layout_constraintTop_toTopOf="@id/beam_logo">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!--            <TextView-->
            <!--                android:id="@+id/textView35"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="@string/current_pool"-->
            <!--                android:textStyle="bold" />-->

            <TextView
                android:id="@+id/textView36"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/network_hashrate"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView37"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pool_hashrate"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="8dp"
            android:orientation="vertical">

            <!--            <TextView-->
            <!--                android:id="@+id/current_pool"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:text="Pool" />-->

            <TextView
                android:id="@+id/network_hashrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/pool_hashrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/public_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:hint="@string/miner_public_key"
        android:inputType="textLongMessage"
        android:maxLines="1"
        android:minHeight="48dp"
        android:textAlignment="center"
        android:textIsSelectable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/beam_logo" />

    <Button
        android:id="@+id/refresh_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Refresh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/public_key" />

    <LinearLayout
        android:id="@+id/workers_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="16dp"
        android:background="@color/cardview_shadow_start_color"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/refresh_btn">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/workers"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/current_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_1h_avg_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_6h_avg_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/_24h_avg_hashrate"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_shares"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/num_workers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_current"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_1h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_6h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/hashrate_24h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="0" />

            <TextView
                android:id="@+id/invalid_shares"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/earnings_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:background="@color/cardview_shadow_start_color"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/workers_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/earnings"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_hour"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_day"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_7_days"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_30_days"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/lastHour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/lastDay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/last7Days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/last30Days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/balance_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="32dp"
        android:layout_marginVertical="8dp"
        android:background="@color/cardview_shadow_start_color"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/earnings_layout"
        android:layout_marginBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/balance"
                android:textAlignment="textEnd"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/unconfirmed"
                android:textAlignment="textEnd" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_paid"
                android:textAlignment="textEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/balance_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/balance_unconfirmed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />

            <TextView
                android:id="@+id/balance_total_paid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>